Completed the app

--- a/submission_reminder_larry/config/config.env
+++ b/submission_reminder_larry/config/config.env
@@ -1,3 +1,7 @@
 # This is the config file
 ASSIGNMENT="Shell Navigation"
 DAYS_REMAINING=2
+GITH_REMAINING=3
+BASICS_REMAINING=1
+GITH="Git"
+BASICS="Shell Basics"
